--- a/report-lab2/src/_preamble.tex
+++ b/report-lab2/src/_preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
 \usepackage{textcomp}
+% \usepackage{latex-dev}
 \usepackage{theorem,caption,extarrows,mathrsfs,physics,bm}
 \usepackage{graphicx,xcolor,booktabs,subfigure,tikz}
 \usepackage{pgfplots,grffile}
@@ -39,6 +40,7 @@
 	\tcbset{enhanced,notitle,colframe=black,colback=white}
 	\begin{tcolorbox}[fuzzy shadow={1.6mm}{-1.6mm}{0mm}{0mm}{fill=black!90!white},arc=0mm]}{\end{tcolorbox}
 	\end{center}}
+\synctex=1
 
 \title{EE332 Lab2: Simulation of Full Adder on Nexys 4 DDR}
 \author{
