--- a/report-lab2/src/listingset.tex
+++ b/report-lab2/src/listingset.tex
@@ -1,7 +1,7 @@
 \usepackage{listings}
 \lstset{
-	basicstyle          =   \sffamily,          % 基本代码风格
-	keywordstyle        =   \bfseries,          % 关键字风格
+	basicstyle          =   \ttfamily,          % 基本代码风格
+	keywordstyle        =   \bfseries\ttfamily,          % 关键字风格
 	commentstyle        =   \rmfamily\itshape,  % 注释的风格，斜体
 	stringstyle         =   \ttfamily,  % 字符串风格
 	flexiblecolumns,                % 别问为什么，加上这个
@@ -42,7 +42,7 @@
 	language =[ANSI]C,
 	backgroundcolor=\color{backcolour},
 	commentstyle=\color[HTML]{338AAF}\ttfamily,
-	keywordstyle=\sffamily\bfseries\color{magenta},
+	keywordstyle=\ttfamily\bfseries\color{magenta},
 	numberstyle=\color{codegray},
 	stringstyle=\color{codepurple},
 	basicstyle=\ttfamily,
@@ -63,7 +63,7 @@
 	language=matlab,
 	backgroundcolor=\color{backcolour},
 	commentstyle=\color[HTML]{338AAF}\ttfamily,
-	keywordstyle=\sffamily\bfseries\color{magenta},
+	keywordstyle=\ttfamily\bfseries\color{magenta},
 	numberstyle=\color{codegray},
 	stringstyle=\color{codepurple},
 	basicstyle=\ttfamily,
@@ -85,10 +85,10 @@
 	language=verilog,
 	backgroundcolor=\color{backcolour},
 	commentstyle=\color[HTML]{338AAF}\ttfamily,
-	keywordstyle=\sffamily\bfseries\color{magenta},
-	numberstyle=\color{codegray},
+	keywordstyle=\ttfamily\bfseries\color{magenta},
+	numberstyle=\tiny\color{codegray},
 	stringstyle=\color{codepurple},
-	basicstyle=\ttfamily,
+	basicstyle=\footnotesize\ttfamily,
 	breakatwhitespace=false,
 	breaklines=true,
 	basewidth=0.5em,
